deploy/homelab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    istio-injection: enabled
