deploy/homelab/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      nodeSelector:
        kubernetes.io/arch: "amd64"
      containers:
        - name: blog
          imagePullPolicy: Always
          image: ghcr.io/kdwils/blog:main
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: http
