deploy/homelab/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-bluegreen
  namespace: blog
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: blog
  strategy:
    canary:
      steps:
        - setWeight: 0
        - pause: { duration: 1m }
        - setWeight: 20
        - pause: { duration: 1m }
        - setWeight: 50
        - pause: { duration: 1m }
        - setWeight: 100
      previewReplicaCount: 1
      trafficRouting:
        istio:
          virtualService:
            name: blog
            routes:
              - blog
          destinationRule:
            name: rollout-destrule
            canarySubsetName: canary
            stableSubsetName: stable
  template:
    metadata:
      labels:
        app: blog
        backstage.io/kubernetes-id: blog
    spec:
      containers:
        - image: ghcr.io/kdwils/blog:main
          imagePullPolicy: Always
          name: blog-rollouts-demo
          ports:
            - containerPort: 8080
              name: http
