deploy/homelab/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blog-gateway
  namespace: blog
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - blog.int.kyledev.co
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - blog.int.kyledev.co
      tls:
        credentialName: blog-kyledev-tls-prod
        mode: SIMPLE
