deploy/homelab/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: blog
  namespace: blog
spec:
  host: blog
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
