deploy/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-server
  namespace: "blog"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: blog.int.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-preview
                port:
                  number: 80
  tls:
    - hosts:
        - blog.int.kyledev.co
      secretName: blog-kyledev-tls-prod
