deploy/homelab/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog
  namespace: blog
spec:
  gateways:
    - blog-gateway
  hosts:
    - blog.int.kyledev.co
  http:
    - match:
        - uri:
            prefix: /
      name: blog
      route:
        - destination:
            host: blog.blog.svc.cluster.local
            port:
              number: 80
            weight: 100
        - destination:
            host: blog-preview.blog.svc.cluster.local
            port:
              number: 80
            weight: 0
